Finish html formatting

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
   <div class="header">
-    <div class="logo">
+    <a class="logo">
       Header Logo
-    </div>
+    </a>
     <div class=links>
       <ul>
         <li><a href="#">header link one</a></li>
@@ -22,31 +22,34 @@
 
   <div class="first-card">
     <div class="left-content">
-      <h2>This website is awesome</h2>
+      <div class="hero">This website is awesome</div>
       <p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower
         contrast.</p>
-      <button class="first-card-signup">Sign up</button>
+      <a href="https://github.com/scottti312/foundations-landing-page"><button class="first-card-signup">Sign
+          up</button></a>
     </div>
     <img class="first-card-image"
       src="https://img.freepik.com/free-vector/nature-scene-with-river-hills-forest-mountain-landscape-flat-cartoon-style-illustration_1150-37326.jpg?w=2000">
   </div>
   <div class="second-card">
-    <h3>Some random information.</h3>
-    <div class="block">
-      <img src="images/chilli.png">
-      <div class="subtext">this is some subtext under an illustration or image</div>
-    </div>
-    <div class="block">
-      <img src="images/pepper.png">
-      <div class="subtext">this is some subtext under an illustration or image</div>
-    </div>
-    <div class="block">
-      <img src="images/saffron.png">
-      <div class="subtext">this is some subtext under an illustration or image</div>
-    </div>
-    <div class="block">
-      <img src="images/barberry.png">
-      <div class="subtext">this is some subtext under an illustration or image</div>
+    <div class="second-title">Some random information.</div>
+    <div class="blocks">
+      <div class="block">
+        <img class="icon" src="images/chilli.png">
+        <div class="subtext">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="block">
+        <img class="icon" src="images/pepper.png">
+        <div class="subtext">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="block">
+        <img class="icon" src="images/saffron.png">
+        <div class="subtext">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="block">
+        <img class="icon" src="images/barberry.png">
+        <div class="subtext">this is some subtext under an illustration or image</div>
+      </div>
     </div>
   </div>
   <div class="third-card">
@@ -60,15 +63,14 @@
   </div>
   <div class="fourth-card">
     <div class="blue-box">
-      <div class="action">Call to action! It's time! </div>
-      <div class="signup">Sign up for our product by clicking that button right over there!</div>
+      <div class="left-blue">
+        <div class="action">Call to action! It's time! </div>
+        <div class="signup">Sign up for our product by clicking that button right over there!</div>
+      </div>
       <button class="fourth-card-signup">Sign up</button>
     </div>
-
-    <div class="footer">Copyright © Scott Ti 2022</div>
   </div>
-
-
+  <div class="footer">Copyright © Scott Ti 2022</div>
 </body>
 
 </html>
