All links lead to github repo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 <body>
   <div class="header">
-    <a class="logo">
+    <a class="logo" href="https://github.com/scottti312/foundations-landing-page">
       Header Logo
     </a>
     <div class=links>
       <ul>
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">header link one</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">header link two</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">header link three</a></li>
       </ul>
     </div>
   </div>
@@ -67,7 +67,8 @@
         <div class="action">Call to action! It's time! </div>
         <div class="signup">Sign up for our product by clicking that button right over there!</div>
       </div>
-      <button class="fourth-card-signup">Sign up</button>
+      <a href="https://github.com/scottti312/foundations-landing-page"><button class="fourth-card-signup">Sign
+          up</button></a>
     </div>
   </div>
   <div class="footer">Copyright © Scott Ti 2022</div>
