Change logo to Welcome and add rainbow animation on Hover

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
   <div class="header">
-    <a class="logo" href="https://github.com/scottti312/foundations-landing-page">
-      Header Logo
+    <a class="logo rainbow_text_animated" href="https://github.com/scottti312/foundations-landing-page">
+      Welcome!
     </a>
     <div class=links>
       <ul>
