--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </a>
     <div class=links>
       <ul>
-        <li><a href="https://github.com/scottti312/foundations-landing-page">header link one</a></li>
-        <li><a href="https://github.com/scottti312/foundations-landing-page">header link two</a></li>
-        <li><a href="https://github.com/scottti312/foundations-landing-page">header link three</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">Click here!</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">Or here?</a></li>
+        <li><a href="https://github.com/scottti312/foundations-landing-page">Maybe here.</a></li>
       </ul>
     </div>
   </div>
@@ -24,10 +24,12 @@
   <div class="first-card">
     <div class="left-content">
       <div class="hero">This website is awesome</div>
-      <p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower
-        contrast.</p>
-      <a href="https://github.com/scottti312/foundations-landing-page"><button class="first-card-signup">Sign
-          up</button></a>
+      <p>This website is made completely from scratch. Icons and colors are from The Odin Project. Mouse
+        over all the buttons and the "Welcome!" logo to see CSS transitions/animation. All buttons will take you to the
+        Github
+        repo.</p>
+      <a href="https://github.com/scottti312/foundations-landing-page"><button
+          class="first-card-signup">Github!</button></a>
     </div>
     <img class="first-card-image"
       src="https://img.freepik.com/free-vector/nature-scene-with-river-hills-forest-mountain-landscape-flat-cartoon-style-illustration_1150-37326.jpg?w=2000">
@@ -37,29 +39,31 @@
     <div class="blocks">
       <div class="block">
         <img class="icon" src="images/chilli.png">
-        <div class="subtext">this is some subtext under an illustration or image</div>
+        <div class="subtext">Ut ornare lectus sit amet est. Velit ut tortor pretium viverra suspendisse potenti
+          nullamac.
+        </div>
       </div>
       <div class="block">
         <img class="icon" src="images/pepper.png">
-        <div class="subtext">this is some subtext under an illustration or image</div>
+        <div class="subtext">Proin sagittis nisl rhoncus mattis rhoncus urna.</div>
       </div>
       <div class="block">
         <img class="icon" src="images/saffron.png">
-        <div class="subtext">this is some subtext under an illustration or image</div>
+        <div class="subtext">Ipsum dolor sit amet consectetur adipiscing elit ut aliquam.</div>
       </div>
       <div class="block">
         <img class="icon" src="images/barberry.png">
-        <div class="subtext">this is some subtext under an illustration or image</div>
+        <div class="subtext">Purus sit amet volutpat consequat mauris nunc congue.</div>
       </div>
     </div>
   </div>
   <div class="third-card">
     <div class="quote">
-      This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
-      will actually read it. Who knows? All I know is that it looks nice.
+      Sed tempus urna et pharetra pharetra massa massa ultricies mi. Cursus sit amet dictum sit amet. Elementum
+      curabitur vitae nunc sed velit dignissim sodales.
     </div>
     <div class="author">
-      -Thor, God of Thunder
+      -Some Latin Person
     </div>
   </div>
   <div class="fourth-card">
@@ -72,7 +76,10 @@
           up</button></a>
     </div>
   </div>
-  <div class="footer">Copyright © Scott Ti 2022</div>
+  <div class="footer">
+    <p>Thanks for visiting.</p>
+    <p>Copyright © Scott Ti 2022</p>
+  </div>
 </body>
 
 </html>
